--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+    <a href="./" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
       <h1 class="sitename">Deval Pandya</h1>
@@ -512,6 +512,19 @@
                   <p>Statistical Machine Learning</p>
                   <a href="assets/img/portfolio/arrhythmia-classification/1.png" title="Arrhythmia Classification" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="./portfolio/arrhythmia-classification.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div>
+            <!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ml">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/sentiment-analysis/1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Sentiment Analysis on Social Media Text</h4>
+                  <p>Natural Language Processing</p>
+                  <a href="assets/img/portfolio/sentiment-analysis/1.png" title="Sentiment Analysis on Social Media Text" data-gallery="portfolio-gallery-ml" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio/sentiment-analysis.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div>
