--- a/portfolio/sentiment-analysis.html
+++ b/portfolio/sentiment-analysis.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Vast 2021 Mini-Challenge 2</title>
+  <title>Sentiment Analysis of Social Media Data</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -78,7 +78,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">VAST Challenge 2021 Mini-Challenge 2</h1>
+        <h1 class="mb-2 mb-lg-0">Sentiment Analysis of Social Media Data</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="../">Home</a></li>
@@ -117,31 +117,31 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/1.png" alt="">
+                  <img src="../assets/img/portfolio/sentiment-analysis/1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/2.png" alt="">
+                  <img src="../assets/img/portfolio/sentiment-analysis/2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/3.png" alt="">
+                  <img src="../assets/img/portfolio/sentiment-analysis/3.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/4.png" alt="">
+                  <img src="../assets/img/portfolio/sentiment-analysis/4.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/5.png" alt="">
+                  <img src="../assets/img/portfolio/sentiment-analysis/5.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/6.png" alt="">
+                  <img src="../assets/img/portfolio/sentiment-analysis/6.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/portfolio/vast-mc/7.png" alt="">
+                  <img src="../assets/img/portfolio/sentiment-analysis/7.png" alt="">
                 </div>
 
               </div>
@@ -153,16 +153,16 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Data Visualization</li>
-                <li><strong>Project start date</strong>: January 2023</li>
-                <li><strong>Project end date</strong>: May 2023</li>
+                <li><strong>Category</strong>: Natural Language Processing</li>
+                <li><strong>Project start date</strong>: August 2019</li>
+                <li><strong>Project end date</strong>: May 2020</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Project Description</h2>
               <p>
-                For the VAST Challenge 2021 Mini-Challenge 2, I focused on analyzing the disappearance of GAStech employees by leveraging geospatial and transaction data. My role involved creating a graphical analytics system that included seven visualizations designed to uncover patterns of suspicious behavior among employees. Using D3.js and Python Flask, I implemented features like a symbol map, stacked bar charts, and heat maps to visualize movement and transaction data effectively. I also optimized data processing to enhance responsiveness, ensuring that complex queries could be addressed efficiently. This project not only honed my skills in data visualization but also deepened my understanding of geospatial analysis and its practical applications in real-world scenarios.
+                This project explores Sentiment Analysis on Social Media Text using a graph-based database (Neo4j). By analyzing tweets obtained via the Twitter API, the sentiment values (positive, negative, or neutral) of users are determined. These sentiments are modeled in a graph database to study user behavior, establish connections, and understand trends in public opinion. Machine Learning techniques, including SVM and LSTM, are employed to classify sentiment and categorize tweets across topics like education, politics, and sports. This analysis can be applied in fields such as advertising, mental health monitoring, and customer sentiment analysis.
               </p>
             </div>
           </div>
