--- a/index.html
+++ b/index.html
@@ -504,6 +504,18 @@
             </div>
             <!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cloud">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/hybrid-cloud/1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Hybrid Cloud Image Processing</h4>
+                  <p>AWS &amp; OpenStack</p>
+                  <a href="assets/img/portfolio/hybrid-cloud/1.png" title="Hybrid Cloud Image Processing" data-gallery="portfolio-gallery-cloud" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./portfolio/hybrid-cloud.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-ml">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/arrhythmia-classification/1.png" class="img-fluid" alt="">
