--- a/src/index.html
+++ b/src/index.html
@@ -2,347 +2,55 @@
 title: Deval Pandya Portfolio
 layout: base.html
 body-class: index-page
+about-me:
+  name: Deval Pandya
+  age: 25
+  city: Phoenix, USA
+  email: devaljpandya@gmail.com
+left-skills:
+  - name: Java
+    percent: 100
+  - name: Amazon Web Services
+    percent: 100
+  - name: Flask
+    percent: 80
+  - name: NoSQL
+    percent: 60
+  - name: Kubernetes
+    percent: 60
+  - name: Linux
+    percent: 100
+  - name: Git
+    percent: 100
+  - name: CSS
+    percent: 90
+right-skills:
+  - name: Python
+    percent: 100
+  - name: Spring Boot
+    percent: 80
+  - name: SQL
+    percent: 80
+  - name: Docker
+    percent: 80
+  - name: Tensorflow
+    percent: 100
+  - name: JavaScript
+    percent: 75
+  - name: HTML
+    percent: 100
+  - name: NodeJS
+    percent: 30
 ---
 
 
-<!-- Hero Section -->
-<section id="hero" class="hero section custom-gradient" data-aos="fade-in">
+{% render "hero-section.html", name: about-me.name %}
 
-  <!-- <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class=""> -->
+{% render "about-section.html", about-me: about-me %}
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-    <h2>Deval Pandya</h2>
-    <p>I'm <span class="typed" data-typed-items="a Developer, an Engineer, a Researcher, an Analyst">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
-  </div>
+{% render "skills-section.html", left-skills: left-skills, right-skills: right-skills %}
 
-</section><!-- /Hero Section -->
-
-<!-- About Section -->
-<section id="about" class="about section">
-
-  <!-- Section Title -->
-  <div class="container section-title" data-aos="fade-up">
-    <h2>About</h2>
-    <p>
-      Hi, I’m Deval Pandya, a software engineer and data enthusiast with a Master’s degree in Computer Science from Arizona State University, where I graduated with a 4.0 GPA. Over the course of my career, I’ve had the opportunity to work with leading companies like JP Morgan Chase and ANB Systems, developing scalable solutions, optimizing performance, and embracing cutting-edge technologies such as cloud computing and machine learning.
-    </p> <br>
-    <p>
-      My experience spans projects like AI chatbots, hybrid cloud applications, and performance tuning machine learning models. I thrive on solving complex challenges and building efficient, impactful software that drives innovation.
-    </p> <br>
-    <p>
-      When I’m not coding, you can find me enjoying sports, both watching and playing, diving into online gaming, or picking up new skills like solving the Rubik’s Cube, performing magic card tricks, or learning Spanish.
-    </p> <br>
-    <p>
-      Let’s connect and build something incredible together!
-    </p>
-  </div><!-- End Section Title -->
-
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-    <div class="row gy-4 justify-content-center">
-      <div class="col-lg-4">
-        <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
-      </div>
-      <div class="col-lg-8 content">
-        <h2>Software Engineering, Machine Learning &amp; Cloud Computing</h2>
-        <div class="row">
-          <div class="col-lg-12">
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Phoenix, USA</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Science</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Computer Science</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:devaljpandya@gmail.com">devaljpandya@gmail.com</a></span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:+15124120861">+1-512-412-0861</a></span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="{{ '/' | url }}">pandyadeval.github.io</a></span></li>
-            </ul>
-          </div>
-      </div>
-    </div>
-
-  </div>
-
-</section><!-- /About Section -->
-
-<!-- Stats Section -->
-<section id="stats" class="stats section">
-
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-    <div class="row gy-4">
-
-      <div class="col-md-6">
-        <div class="stats-item">
-          <i class="bi bi-briefcase"></i>
-          <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-          <p><strong>Years</strong> <span>of professional experience</span></p>
-        </div>
-      </div>
-      <!-- End Stats Item -->
-
-      <div class="col-md-6">
-        <div class="stats-item">
-          <i class="bi bi-journal-code"></i>
-          <span data-purecounter-start="0" data-purecounter-end="27" data-purecounter-duration="1" class="purecounter"></span>
-          <p><strong>Projects</strong> <span>completed</span></p>
-        </div>
-      </div>
-      <!-- End Stats Item -->
-
-    </div>
-
-  </div>
-
-</section><!-- /Stats Section -->
-
-<!-- Skills Section -->
-<section id="skills" class="skills section light-background">
-
-  <!-- Section Title -->
-  <div class="container section-title" data-aos="fade-up">
-    <h2 class="justify-content-center">Skills</h2>
-  </div><!-- End Section Title -->
-
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-    <div class="row skills-content skills-animation">
-
-      <div class="col-lg-6">
-
-        <div class="progress">
-          <span class="skill"><span>Java</span> <i class="val">100%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>Amazon Web Services</span> <i class="val">80%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>Flask</span> <i class="val">80%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>NoSQL</span> <i class="val">60%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>Kubernetes</span> <i class="val">60%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>Linux</span> <i class="val">100%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>Git</span> <i class="val">100%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-      </div>
-
-      <div class="col-lg-6">
-
-        <div class="progress">
-          <span class="skill"><span>Python</span> <i class="val">100%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>Spring Boot</span> <i class="val">80%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>SQL</span> <i class="val">80%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>Docker</span> <i class="val">80%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>Tensorflow</span> <i class="val">100%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-        <div class="progress">
-          <span class="skill"><span>Node.js</span> <i class="val">30%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div><!-- End Skills Item -->
-
-      </div>
-
-    </div>
-
-  </div>
-
-</section><!-- /Skills Section -->
-
-<!-- Resume Section -->
-<section id="resume" class="resume section">
-
-  <!-- Section Title -->
-  <div class="container section-title" data-aos="fade-up">
-    <h2>
-      Resume  
-    </h2> 
-    <a href="./assets/resumes/Deval_Pandya_Resume.pdf" target="_blank"><i class="bi bi-download fs-4"></i></a>
-  </div><!-- End Section Title -->
-
-  <div class="container">
-
-    <div class="row justify-content-center">
-
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-        <h3 class="resume-title">Sumary</h3>
-
-        <div class="resume-item pb-0">
-          <h4>Deval Pandya</h4>
-          <p><em>Versatile Computer Science graduate with a robust academic foundation, including a 4.0 GPA in
-            a Master's program from Arizona State University, and hands-on experience in data analysis,
-            machine learning, and software engineering. Proven ability to develop scalable ML pipelines,
-            optimize complex systems, and lead high-impact projects, demonstrated through internships
-            and professional roles at JP Morgan Chase, ANB Systems, and research contributions at
-            Arizona State University.</em></p>
-          <ul>
-            <li>Phoenix, AZ</li>
-            <li>+1-512-412-0861</li>
-            <li>devaljpandya@gmail.com</li>
-          </ul>
-        </div><!-- End Resume Item -->
-
-        <h3 class="resume-title">Education</h3>
-        <div class="resume-item">
-          <h4>Master of Science - Computer Science</h4>
-          <h5>2022 - 2024</h5>
-          <p><em>Arizona State University, Tempe, AZ</em></p>
-          <p>GPA: 4.0 out of 4.0</p>
-        </div><!-- End Resume Item -->
-
-        <div class="resume-item">
-          <h4>Bachelor of Technology - Computer Engineering</h4>
-          <h5>2016 - 2020</h5>
-          <p><em>Sardar Vallabhbhai National Institute of Technology, Surat, GJ</em></p>
-          <p>GPA: 8.04 out of 10.0</p>
-        </div><!-- End Resume Item -->
-
-        <h3 class="resume-title">Professional Experience</h3>
-        <div class="resume-item">
-          <h4>Data Analyst Intern</h4>
-          <h5>January 2024 - May 2024</h5>
-          <p><em>ANB Systems LLC, Houston, TX</em></p>
-          <ul>
-            <li>Developed and deployed a scalable, automated ML pipeline using AWS services to streamline model training, improving turnaround time and resource efficiency for various ML models</li>
-            <li>Enhanced the company’s existing ML architecture by integrating active learning mechanisms and standardizing workflows, resulting in significant reduction of manual processes and enabling seamless future model integration and updates.</li>
-          </ul>
-        </div><!-- End Resume Item -->
-
-        <div class="resume-item">
-          <h4>Research Aide</h4>
-          <h5>November 2022 - January 2024</h5>
-          <p><em>Arizona State University, Tempe, AZ</em></p>
-          <ul>
-            <li>Performance tuned a CNN-LSTM model to predict the trajectory of an airplane based on its 3 control surfaces in a NASA project.</li>
-            <li>Achieved precision of upto 0.04 mm for predicting the location of a solder joint crack on a PCB using AE sensor data in an Intel Project.</li>
-          </ul>
-        </div><!-- End Resume Item -->
-
-        <div class="resume-item">
-          <h4>Software Engineer</h4>
-          <h5>August 2020 - August 2022</h5>
-          <p><em>JP Morgan Chase, Mumbai, MH</em></p>
-          <ul>
-            <li>Managed to reduce the overhead of a critical application by 90% along with increasing its availability and performance.</li>
-            <li>Solved several production issues as well as security vulnerabilities and also took part in many production deployments for the products.</li>
-            <li>Successfully achieved a modernization task for an application by updating its authentication methods from SAML to OAuth2.</li>
-            <li>Developed and optimized efficient SQL routines and procedures for multiple applications.</li>
-          </ul>
-        </div><!-- End Resume Item -->
-
-        <div class="resume-item">
-          <h4>Software Engineer Intern</h4>
-          <h5>May 2019 - July 2019</h5>
-          <p><em>JP Morgan Chase, Mumbai, MH</em></p>
-          <ul>
-            <li>Created a cloud-native chatbot for helping new hires with the on-boarding process interactively.</li>
-            <li>Developed features like following various story lines to help the user with the process.</li>
-            <li>Utilized Kubernetes clusters to host back-end and front-end servers for improving performance, security and availability.</li>
-          </ul>
-        </div><!-- End Resume Item -->
-
-        <div class="resume-item">
-          <h4>Summer Intern</h4>
-          <h5>May 2018 - July 2018</h5>
-          <p><em>MobileFirst Application, Ahmedabad, GJ</em></p>
-          <ul>
-            <li>Implemented basic sentimental analysis on tweets using NLP and probabilistic models.</li>
-            <li>Developed a portable air quality checker using various gas sensors to collect appropriate data.</li>
-            <li>The collected data is then sent to an online database using the WiFi module.</li>
-          </ul>
-        </div><!-- End Resume Item -->
-
-      </div>
-
-    </div>
-
-  </div>
-
-</section><!-- /Resume Section -->
+{% render "resume-section.html" %}
 
 <!-- Portfolio Section -->
 <section id="portfolio" class="portfolio section light-background">
